--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
