updated toggle favorite recipe

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://mozahid96:RMJfxS9zxuKRfzkz@muzahid.cuocq6p.mongodb.net/khanaKhazana?retryWrites=true&w=majority&appName=muzahid
+
+CONNECTION_URI = mongodb+srv://mozahid96:RMJfxS9zxuKRfzkz@muzahid.cuocq6p.mongodb.net/
