--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongoose": "^8.3.2",
     "next": "14.2.3",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18"
   },
